--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 </div>
                 
                 <div class="row">
-                    <span></span>
+                    <span>S</span>
                     <span>H</span>
                     <span>R</span>
-                    <span></span>
+                    <span>E</span>
                     <span>Y</span>
-                    <span></span>
+                    <span>A</span>
                     
                 </div>
             </div>
